--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -13,9 +13,15 @@
 			255
 		],
 		"Tekkadan": [
-			183,
-			83,
-			95,
+			141,
+			31,
+			34,
+			255
+		],
+		"Iron-Blooded Orphans": [
+			141,
+			31,
+			34,
 			255
 		],
 	},
